# chessman

./: .gitignore  CHANGELOG.MD  CMakeLists.txt  README.MD
chessman-cli/: chessman-cli.cpp
chessman-qt/: chessman-qt.cpp
chessman-qt/qml/: main.qml  main.qrc
chessman-qt/qml/controls/: Chessboard.qml  File.qml  Rank.qml  Square.qml
chessman-qt/src/: gamecontrollerobject.cpp  gamecontrollerobject.hpp  logobject.hpp
game/: board.cpp  board.hpp  gamecontroller.cpp  gamecontroller.hpp  history.cpp  history.hpp  player.cpp  player.hpp
game/ai/: kipp.cpp  kipp.hpp
game/board/: board.cpp  board.hpp
game/debug/: dump.cpp  dump.hpp  log.cpp  log.hpp
game/helpers/: comparison.cpp  comparison.hpp  conversion.cpp  conversion.hpp
game/pieces/: bishop.cpp  bishop.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp
game/player/: player.hpp
game/tests/: tests.cpp
game/tests/automated/: board_test.hpp  gamecontroller_test.hpp  helpers_test.hpp  history_test.hpp  player_test.hpp
game/tests/automated/ai/: kipp_test.hpp
game/tests/automated/includes/: compare_board.hpp  vectors_of_tuples.hpp
game/tests/automated/pieces/: bishop_test.hpp  king_test.hpp  knight_test.hpp  pawn_test.hpp  queen_test.hpp  rook_test.hpp
game/tests/manual/: castling.txt  castling_long_w.txt  castling_short_w.txt  tests_manual.cpp
